KBITCase to spring